--- a/app/assets/stylesheets/devices.scss
+++ b/app/assets/stylesheets/devices.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the devices controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.wrapper {
+  display:flex;
+  justify-content: center;
+  background-color: rgb(235, 235, 235);
+}
+
+.main_space {
+  height: calc( 100vh - 240px );
+  width: 1000px;
+  background-color: white;
+  overflow: scroll;
+  padding: 20px 20px;
+  
+}
