--- a/app/views/devices/new.html.haml
+++ b/app/views/devices/new.html.haml
@@ -4,6 +4,12 @@
   = render "layouts/side_bar"
   .main_space
     = form_with model: @device do |f|
+      
+      .form
+        .form__item
+          = f.label :device_class, '機器分類'
+        -# = f.text_field :device_class
+        = f.collection_select :device_class_id, DeviceClass.all, :id, :name,{include_blank: "選択してください"}
       .form
         .form__item
           = f.label :name, '機器名'
@@ -15,7 +21,7 @@
       .form
         .form__item
           = f.label :serial_number, 'シリアルNo'
-        = f.text_field :serila_number
+        = f.text_field :serial_number
       .form
         .form__item
           = f.label :purchase_date, '購入日'
@@ -34,6 +40,6 @@
         = f.date_select :next_inspection_date
       .form
         .form__item
-          = f.label :inspection_interbal, '点検間隔'
-        = f.text_field :inspection_interbal
+          = f.label :inspection_interval_id, '点検間隔'
+        = f.collection_select :inspection_interval_id, InspectionInterval.all, :id, :name,{include_blank: "選択してください"}
       = f.submit '機器登録'
