--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -14,7 +14,7 @@
       .new_registration
         = link_to "新規登録", new_device_path, class:"btn-flat-border-green"
       .devise_list
-        = link_to "機器一覧","#", class:"btn-flat-border-green"
+        = link_to "機器一覧",list_devices_path, class:"btn-flat-border-green"
       .repair_support
         = link_to "修理対応","#", class:"btn-flat-border-green"
       
