--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -4,7 +4,7 @@
       .label
         ・ユーザー
       .new_registration
-        = link_to "新規登録","#", class:"btn-flat-border-blue"
+        = link_to "新規登録",new_user_registration_path, class:"btn-flat-border-blue"
       .log_in
         = link_to "ログイン","#", class:"btn-flat-border-blue"
 
