--- a/app/views/devices/list.html.haml
+++ b/app/views/devices/list.html.haml
@@ -11,6 +11,7 @@
           %th 型番
           %th シリアルNo
           %th 購入日
+          %th 貸出可否
         - @devices.each do |device|
           %tr
             %td= link_to device.id, device
@@ -18,3 +19,4 @@
             %td= device.model_number
             %td= device.serial_number
             %td= device.purchase_date
+            %td= device.lending_status ? '×': '○'
