--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -3,10 +3,20 @@
     .user
       .label
         ・ユーザー
-      .new_registration
-        = link_to "新規登録",new_user_registration_path, class:"btn-flat-border-blue"
-      .log_in
-        = link_to "ログイン","#", class:"btn-flat-border-blue"
+        
+      - if user_signed_in?
+        .user_name
+          ようこそ、
+          = current_user.name
+          さん
+        .new_registration
+          = link_to "ログアウト", destroy_user_session_path, method: :delete, class:"btn-flat-border-blue"
+       
+      - else
+        .new_registration
+          = link_to "新規登録",new_user_registration_path, class:"btn-flat-border-blue"
+        .log_in
+          = link_to "ログイン",new_user_session_path, class:"btn-flat-border-blue"
 
     .devise
       .label
