--- a/app/views/devices/index.html.haml
+++ b/app/views/devices/index.html.haml
@@ -5,3 +5,20 @@
   .main_space
     .information
       トップページ
+      
+      %table
+        %tr
+          %th ID
+          %th 機器名
+          %th 型番
+          %th シリアルNo
+          %th 購入日
+          %th 貸出可否
+        - @devices.each do |device|
+          %tr
+            %td= link_to device.id, device
+            %td= device.name
+            %td= device.model_number
+            %td= device.serial_number
+            %td= device.purchase_date
+            %td= device.lending_status ? '×': '○'
