--- a/app/assets/stylesheets/side_bar.scss
+++ b/app/assets/stylesheets/side_bar.scss
@@ -31,6 +31,18 @@
         padding: 10px 10px 0 10px;
       }
     }
+
+    .task {
+      .label{
+        padding-top: 40px;
+      }
+      .new_registration{
+        padding: 10px 10px 0 10px;
+      }
+      .task_list{
+        padding: 10px 10px 0 10px;
+      }
+    }
    
   }
 }
