--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -21,10 +21,18 @@
     .devise
       .label
         ・機器管理
-      .new_registration
-        = link_to "新規登録", new_device_path, class:"btn-flat-border-green"
+      - if user_signed_in?
+        .new_registration
+          = link_to "新規登録", new_device_path, class:"btn-flat-border-green"
       .devise_list
         = link_to "機器一覧",list_devices_path, class:"btn-flat-border-green"
-      .repair_support
-        = link_to "修理対応","#", class:"btn-flat-border-green"
-      
+
+
+    .task
+      .label
+        ・修理対応
+      - if user_signed_in?
+        .new_registration
+          = link_to "新規登録", new_task_path, class:"btn-flat-border-green"
+      .task_list
+        = link_to "修理機器一覧",tasks_path, class:"btn-flat-border-green"
