--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -7,22 +7,24 @@
       %table
         %tr
           %th 修理ID
+          %th 受取日
           %th 提出者
           %th 受取者
           %th 機器ID
           %th 機器名
           %th 部署
           %th トラブル内容
-          %th 受取日
+          
         - @tasks.each do |task|
           %tr
             %td= link_to task.id, task
+            %td= task.created_at.strftime("%Y-%m-%d")
             %td= task.submitter
             %td= task.user.name
             %td= task.device.id
             %td= task.device.name
             %td= task.department.name
             %td= task.trouble_content
-            %td= task.created_at
+            
 
   
