--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -35,4 +35,4 @@
         .new_registration
           = link_to "新規登録", new_task_path, class:"btn-flat-border-green"
       .task_list
-        = link_to "修理機器一覧",tasks_path, class:"btn-flat-border-green"
+        = link_to "完了未リスト", incomplete_tasks_path, class:"btn-flat-border-green"
