--- a/app/assets/stylesheets/side_bar.scss
+++ b/app/assets/stylesheets/side_bar.scss
@@ -39,7 +39,10 @@
       .new_registration{
         padding: 10px 10px 0 10px;
       }
-      .task_list{
+      .incomplete{
+        padding: 10px 10px 0 10px;
+      }
+      .complete{
         padding: 10px 10px 0 10px;
       }
     }
