--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -34,5 +34,7 @@
       - if user_signed_in?
         .new_registration
           = link_to "新規登録", new_task_path, class:"btn-flat-border-green"
-      .task_list
+      .incomplete
         = link_to "完了未リスト", incomplete_tasks_path, class:"btn-flat-border-green"
+      .complete
+        = link_to "完了済リスト", complete_tasks_path, class:"btn-flat-border-green"
