--- a/app/assets/stylesheets/devices.scss
+++ b/app/assets/stylesheets/devices.scss
@@ -13,6 +13,13 @@
   
 }
 
+.fotter {
+  height: 100px;
+  width: 1040px;
+  background-color: rgb(160, 160, 160);
+  
+}
+
 table{
   
   border-collapse:separate;
