--- a/app/assets/stylesheets/devices.scss
+++ b/app/assets/stylesheets/devices.scss
@@ -17,6 +17,9 @@
   height: 100px;
   width: 1040px;
   background-color: rgb(160, 160, 160);
+  .container {
+    padding: 20px 20px 0 20px;
+  }
   
 }
 
