--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.comment {
+  &__upper {
+    display: flex;
+    &--left {
+    }
+    &--right {
+      padding-left: 30px;
+      font-size: 12px;
+      color: rgb(121, 121, 121);
+    }
+  }
+
+  &__under {
+    &--text {
+      font-size: 20px;
+      padding-bottom: 10px;
+    }
+  }
+
+  
+
+}
