--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -57,7 +57,23 @@
           .done_botton
             = button_to '変更', done_path(@task), method: :post, data:{confirm: '本当によろしいですか?'}
   
-  
+      .comments
+        %h2 ＜対応一覧＞
+        - if @comments
+          - @comments.each do |comment|
+            .comment
+              .comment__upper
+                .comment__upper--left
+                  %strong
+                    = comment.user.name
+                    ：
+                .comment__upper--right
+                  = comment.created_at.strftime("%Y年%m月%d日")
+                  - if user_signed_in? && current_user.id == comment.user_id
+                    = link_to "削除", task_comment_path(comment.task.id, comment.id), method: :delete, data:{confirm: '本当によろしいですか?'}
+              .comment__under
+                .comment__under--text
+                  = comment.text
   
     .fotter
       .container
