rental_controller_create

--- a/app/assets/stylesheets/side_bar.scss
+++ b/app/assets/stylesheets/side_bar.scss
@@ -46,6 +46,21 @@
         padding: 10px 10px 0 10px;
       }
     }
+
+    .devices_rental {
+      .label{
+        padding-top: 40px;
+      }
+      .rental{
+        padding: 10px 10px 0 10px;
+      }
+      .return{
+        padding: 10px 10px 0 10px;
+      }
+      .histry{
+        padding: 10px 10px 0 10px;
+      }
+    }
    
   }
 }
