--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -43,7 +43,7 @@
       .label
         ・機器レンタル  
       .rental
-        = link_to "貸出", rental_rentals_path, class:"btn-flat-border-green"
+        = link_to "貸出", new_rental_path, class:"btn-flat-border-green"
       .return
         = link_to "返却", return_rentals_path, class:"btn-flat-border-green"
       .histry
