--- a/app/assets/stylesheets/main_header.scss
+++ b/app/assets/stylesheets/main_header.scss
@@ -14,3 +14,16 @@
     }
   }
 }
+
+.notification {
+  .notice {
+    background-color: rgb(26, 152, 255);
+    color: white;
+    text-align: center;
+  }
+  .alert {
+    background-color:  rgb(255, 69, 69);
+    color: white;
+    text-align: center;
+  }
+ }
