--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -47,4 +47,4 @@
       .return
         = link_to "返却", return_rentals_path, class:"btn-flat-border-green"
       .histry
-        = link_to "貸出履歴", histry_rentals_path, class:"btn-flat-border-green"
+        = link_to "貸出履歴", history_rentals_path, class:"btn-flat-border-green"
