--- a/app/views/rentals/return.html.haml
+++ b/app/views/rentals/return.html.haml
@@ -3,17 +3,7 @@
 .wrapper
   = render "layouts/side_bar"
   .main_space
-    = form_with model: @rental,local: true do |f|
-      
-      .form
-        .form__item
-          = f.label :device_id, '機器ID'
-        = f.text_field :device_id
-
-      .form
-        .form__item
-          = f.label :return_staff, 'スタッフ名'
-        = f.text_field :return_staff
-     
-      = f.submit '貸出'
+    = text_field_tag "id"
+    .done_botton
+      = button_to '変更', return_done_path(@rental), method: :post, data:{confirm: '本当によろしいですか?'}
 
