--- a/app/views/layouts/_side_bar.html.haml
+++ b/app/views/layouts/_side_bar.html.haml
@@ -45,6 +45,6 @@
       .rental
         = link_to "貸出", new_rental_path, class:"btn-flat-border-green"
       .return
-        = link_to "返却", return_rentals_path, class:"btn-flat-border-green"
+        = link_to "返却", new_return_path, class:"btn-flat-border-green"
       .histry
         = link_to "貸出履歴", history_rentals_path, class:"btn-flat-border-green"
