--- a/app/views/returns/new.html.haml
+++ b/app/views/returns/new.html.haml
@@ -20,4 +20,4 @@
           = f.label :return_staff, 'スタッフ名'
         = f.text_field :return_staff
      
-      = f.submit '貸出'
+      = f.submit '返却'
